@@ -5,8 +5,10 @@ $Id$
 ChangeLog
 
 2009-09-12
-	- new OntServlet as main entry point and as a preparation to start refactoring oif UriResolver
+	- new OntServlet as main entry point and as a preparation to start refactoring of UriResolver
 	- new UriResolver2 as a support for the incremental refactoring
+	- UriResolver2: preliminary dispatch;
+	- OntServlet: calls uriResolver2 (and not uriResolver) if special developer parameter "ur2" is included in the request.
 	
 2009-09-11
 	- Added config property: aquaportal.voc2rdf.dir
